# amir740_ros

./: LICENSE  README.en.md  README.md
amir/: CHANGELOG.rst  CMakeLists.txt  package.xml
amir_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
amir_bringup/launch/: amir_moveit.launch.py  test_joint_trajectory_controller.launch.py
amir_bringup/rviz/: amir_moveit.rviz
amir_control/: CHANGELOG.rst  CMakeLists.txt  README.md  basic.rviz  package.xml
amir_control/config/: amir_controllers.yaml
amir_control/launch/: amir_control_HW.launch  rosserial.launch
amir_control/msg/: jointCmd.msg  jointSensor.msg
amir_control/src/: amir_hw_interface.cpp  amir_hw_main.cpp  amir_sim_echo.cpp  joint_state_relay.cpp
amir_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
amir_description/launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch  urdf-rover.rviz  urdf.rviz
amir_description/meshes/: base_link.stl  finger_left_1.stl  finger_right_1.stl  gripper_base_1.stl  inner_link_left_1.stl  inner_link_right_1.stl  link1_1.stl  link2_1.stl  link3_1.stl  link4_1.stl  outer_link_left_1.stl  outer_link_right_1.stl
amir_description/rviz/: urdf.rviz
amir_description/urdf/: amir.gazebo  amir.trans  amir.xacro  amir_f120a.xacro  amir_for_rover.xacro  amir_mecanum3.xacro  amir_mega3.xacro  materials.xacro
amir_driver/: CHANGELOG.rst  CMakeLists.txt  amir_driver.xml  package.xml
amir_driver/config/: amir_joint_trajectory_publisher.yaml  amir_ros2_controllers.yaml
amir_driver/src/: amir_hardware_interfaces.cpp
amir_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
amir_interfaces/msg/: AmirCmd.msg
amir_motion/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
amir_motion/src/: constrain.cpp  move_group_RPY.cpp  move_group_interface.cpp  move_group_joint_value.cpp  pick_place.cpp  planning_scene_primatives.cpp
amir_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
amir_moveit_config/config/: amir.ros2_control.xacro  amir.srdf  amir.urdf.xacro  cartesian_limits.yaml  fake_controllers.yaml  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ros_controllers.yaml
amir_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo.launch.py  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  move_group.launch.py  moveit.rviz  moveit_rviz.launch.py  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  rsp.launch.py  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  setup_assistant.launch.py  simple_moveit_controller_manager.launch.xml  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  stomp_planning_pipeline.launch.xml  warehouse_db.launch.py
f120a_arm_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
f120a_arm_moveit_config/config/: amir_f120a.srdf  ompl_planning.yaml  simple_moveit_controllers.yaml
f120a_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  f120a_arm_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_nav.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
mecanum3_arm_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mecanum3_arm_moveit_config/config/: amir_mecanum3.srdf  fake_controllers.yaml  ros_controllers.yaml
mecanum3_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  (+9 more)
mega3_arm_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ros_control_boilerplate/: README.md
(+19 files in other folders)
