<?xml version="1.0"?>
<package format="2">
  <name>amir_description</name>
  <version>1.0.0</version>
  <description>3D models of the AMIR 740 for simulation and visualization</description>
  <maintainer email="infodesk@vstone.co.jp">Vstone</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

</package>
